Updated via CMS: contact.html

--- a/contact.html
+++ b/contact.html
@@ -1018,7 +1018,7 @@ body {
         <div class="about-section">
             <h2 class="section-title">नकाशा (Location)</h2>
             <div class="map-responsive">
-                <iframe src="MapLink" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15338.260323190565!2d74.23827517695362!3d16.036140277098294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc080ccbf008ced%3A0xd2cce40e9bf3dca3!2sVinzane%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1768642501196!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="about-section text-center">
