--- a/app_download.html
+++ b/app_download.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Download App - विझंणे ग्रामपंचायत, चंदगड</title>
+        <title>Download App - विंझणे ग्रामपंचायत, चंदगड</title>
         <meta name="theme-color" content="#FF9933">
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -35,8 +35,8 @@
     <body>
         <div class="app-card">
             <img src="https://vizhane.chandgadgp.in/assets/gp3379347.webp" alt="App Icon" class="app-icon">
-            <h1>विझंणे ग्रामपंचायत, चंदगड</h1>
-            <p>Vizhane Grampanchayat, Chandgad</p>
+            <h1>विंझणे ग्रामपंचायत, चंदगड</h1>
+            <p>Vinzhane Grampanchayat, Chandgad</p>
             
             <button id="pwaInstallBtn" class="install-btn" style="display:none;">
                 <i class="fas fa-download"></i> Install App Now
